--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,21 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>br.com.orangex</groupId>
 	<artifactId>api</artifactId>
 	<version>1.0.0</version>
-	<name>api</name>
+	<name>orangex_api</name>
 	<description>OrangeX Spring Boot API</description>
 	<properties>
 		<java.version>22</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
