--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=orangex_api
+
+#Auto-creating MongoDB classes indexes
+spring.data.mongodb.auto-index-creation=true
+
+#Swagger Configs
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
